kubernetes/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${PUBLIC_DOMAIN0}"
spec:
  ingressClassName: external
  rules:
    - host: &host "flux-webhook.${PUBLIC_DOMAIN0}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
